--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,87 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alabaster==0.7.12
+appnope==0.1.0
+arrow==0.13.1
+awscli==1.16.107
+Babel==2.6.0
+backcall==0.1.0
+binaryornot==0.4.4
+bleach==3.1.0
+botocore==1.12.97
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+colorama==0.3.9
+cookiecutter==1.6.0
+coverage==4.5.2
+cycler==0.10.0
+decorator==4.3.2
+defusedxml==0.5.0
+docutils==0.14
+entrypoints==0.3
+flake8==3.7.6
+future==0.17.1
+idna==2.8
+imagesize==1.1.0
+ipykernel==5.1.0
+ipython==7.3.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.2
+Jinja2==2.10
+jinja2-time==0.2.0
+jmespath==0.9.3
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+MarkupSafe==1.1.0
+matplotlib==3.0.2
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.4.1
+nbformat==4.4.0
+notebook==5.7.4
+numpy==1.16.1
+packaging==19.0
+pandas==0.24.1
+pandocfilters==1.4.2
+parso==0.3.4
+pexpect==4.6.0
+pickleshare==0.7.5
+poyo==0.4.2
+prometheus-client==0.5.0
+prompt-toolkit==2.0.8
+ptyprocess==0.6.0
+pyasn1==0.4.5
+pycodestyle==2.5.0
+pyflakes==2.1.0
+Pygments==2.3.1
+pyparsing==2.3.1
+python-dateutil==2.8.0
+python-dotenv==0.10.1
+pytz==2018.9
+PyYAML==3.13
+pyzmq==17.1.3
+qtconsole==4.4.3
+requests==2.21.0
+rsa==3.4.2
+s3transfer==0.2.0
+scikit-learn==0.20.2
+scipy==1.2.1
+seaborn==0.9.0
+Send2Trash==1.5.0
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.4
+sphinxcontrib-websupport==1.1.0
+terminado==0.8.1
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
+urllib3==1.24.1
+wcwidth==0.1.7
+webencodings==0.5.1
+whichcraft==0.5.2
+widgetsnbextension==3.4.2
